--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		<div class="row button-section">
 			<div class="col-twelve">
 				<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
-				<a href="assets/RenKai_CV.pdf" title="Download CV" class="button button-primary"
+				<a href="assets/KaiRen_CV_2023.pdf" title="Download CV" class="button button-primary"
 					target="__blank">Download CV</a>
 				<!-- <a href="http://d.renkaigis.com/resume/Resume_RenKai1.pdf" title="Download CV"
 					class="button button-primary" target="__blank">Download CV</a> -->
@@ -322,8 +322,47 @@
 			</div> <!-- /resume-header -->
 			<div class="col-twelve">
 				<div class="timeline-wrap">
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+						<div class="timeline-header">
+							<h3>智慧农业“三秦创新团队”</h3>
+							<p>2021.09 - Current</p>
+						</div>
+						<div class="timeline-content">
+							<h4>陕西省智慧农业决策系统和大数据分析平台 | 参与者</h4>
+							<span>
+								<h5 style="display: inline;">项目描述：</h5>
+								构建旱地农业系统大数据分析平台和“智慧果园”决策支持平台。构建智慧农业技术体系，支撑农业、果业、气象、水利等业务部门灾害监测、预警预报、农业保险、产量预报等技术需求；
+							</span></br>
+							<span>
+								<h5 style="display: inline;">工作描述：</h5>
+								在新疆喀什和兵团第七师一二八团采集不同棉花品种在生育期内的气候数据（风速、风向、温湿度、降水、墒情等）及生长状况数据（行距、株距、株高、产量等），用以验证团队开发的“棉先知”模型系统，以及助力于棉花更科学更智慧的种植。
+							</span>
+						</div>
+					</div>
 
-
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+						<div class="timeline-header">
+							<h3>新疆棉花管理系统</h3>
+							<p>2020.09 - Current</p>
+						</div>
+						<div class="timeline-content">
+							<h4>新疆棉花决策管理支持系统 | 参与者</h4>
+							<span>
+								<h5 style="display: inline;">项目描述：</h5>
+								构建一个棉花生产决策管理系统及服务平台，提供科学化、规模化、标准化的技术服务，可实现用户/地块管理、田间生产任务管理、作物长势/病虫害/环境/灾害预测预警、农资服务管理、农技服务管理和农机服务管理等功能。
+							</span></br>
+							<span>
+								<h5 style="display: inline;">工作描述：</h5>
+								参与棉花决策管理支持系统的开发设计，可实现对棉花种植区域内地块的管理及对棉花生育期内施肥灌溉等措施进行决策支持，提供相应的解决方案。该系统有待进一步的数据支撑和验证。
+							</span>
+						</div>
+					</div>
 
 					<div class="timeline-block">
 						<div class="timeline-ico">
@@ -336,7 +375,8 @@
 						<div class="timeline-content">
 							<h4>滇池蓝藻水华遥感监测及预警体系研究 | 负责人</h4>
 							<span>
-								<h5 style="display: inline;">项目描述：</h5>利用 Fortran、C#、VTK 与插件技术，基于 ArcGIS Engine 平台，结合
+								<h5 style="display: inline;">项目描述：</h5>利用 Fortran、C#、VTK 与插件技术，基于 ArcGIS Engine
+								平台，结合
 								FVCOM 模型模拟了蓝藻水华空间分布特征与动态演化过程，并完成滇池蓝藻水华漂移系统的研发；
 							</span></br>
 							<span>
@@ -344,49 +384,50 @@
 								作为主要负责人，完成了蓝藻水华漂移机理与可视化研究，模拟了蓝藻水华空间分布特征及动态演化过程，并完成了滇池蓝藻水华漂移系统的研发。
 							</span>
 						</div>
-						<div class="timeline-block">
-							<div class="timeline-ico">
-								<i class="fa fa-briefcase"></i>
-							</div>
-							<div class="timeline-header">
-								<h3>邳州市水利局项目</h3>
-								<p>2017.04 - 2018.05</p>
-							</div>
-							<div class="timeline-content">
-								<h4>邳州市地下水脆弱性评价 | 负责人</h4>
-								<span>
-									<h5 style="display: inline;">项目描述：</h5>基于 ArcGIS 软件、C#
-									开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作；
-								</span></br>
-								<span>
-									<h5 style="display: inline;">工作描述：</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。
-								</span>
-							</div>
-						</div> <!-- /timeline-block -->
-						<div class="timeline-block">
-							<div class="timeline-ico">
-								<i class="fa fa-briefcase"></i>
-							</div>
-							<div class="timeline-header">
-								<h3>国家级科创项目</h3>
-								<p>2013.12 - 2015.06</p>
-							</div>
-							<div class="timeline-content">
-								<h4>《黄土坡耕地微地形数值模拟及机理研究》 | 负责人</h4>
-								<span>
-									<h5 style="display: inline;">项目描述：</h5>
-									采用人工模拟降雨试验和微地形扫描测量等方法，动态监测坡面水蚀过程中侵蚀形态发生与演变过程，结合
-									GIS 技术建立相应的微地形 DEM，通过理论分析和数学模拟，建立坡面不同侵蚀形态发生演变过程动态数值模拟模型；
-								</span></br>
-								<span>
-									<h5 style="display: inline;">工作描述：</h5>
-									作为项目总负责人，统筹规划，确定实验方案，带领组员开展黄土坡耕地坡面侵蚀形态演变的试验研究，并进行数据模拟及检验。
-								</span>
-							</div>
-						</div> <!-- /timeline-block -->
+					</div>
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+						<div class="timeline-header">
+							<h3>邳州市水利局项目</h3>
+							<p>2017.04 - 2018.05</p>
+						</div>
+						<div class="timeline-content">
+							<h4>邳州市地下水脆弱性评价 | 负责人</h4>
+							<span>
+								<h5 style="display: inline;">项目描述：</h5>基于 ArcGIS 软件、C#
+								开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作；
+							</span></br>
+							<span>
+								<h5 style="display: inline;">工作描述：</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。
+							</span>
+						</div>
 					</div> <!-- /timeline-block -->
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+						<div class="timeline-header">
+							<h3>国家级科创项目</h3>
+							<p>2013.12 - 2015.06</p>
+						</div>
+						<div class="timeline-content">
+							<h4>《黄土坡耕地微地形数值模拟及机理研究》 | 负责人</h4>
+							<span>
+								<h5 style="display: inline;">项目描述：</h5>
+								采用人工模拟降雨试验和微地形扫描测量等方法，动态监测坡面水蚀过程中侵蚀形态发生与演变过程，结合
+								GIS 技术建立相应的微地形 DEM，通过理论分析和数学模拟，建立坡面不同侵蚀形态发生演变过程动态数值模拟模型；
+							</span></br>
+							<span>
+								<h5 style="display: inline;">工作描述：</h5>
+								作为项目总负责人，统筹规划，确定实验方案，带领组员开展黄土坡耕地坡面侵蚀形态演变的试验研究，并进行数据模拟及检验。
+							</span>
+						</div>
+					</div> <!-- /timeline-block -->
+				</div> <!-- /timeline-block -->
 
-					<!-- <div class="timeline-block">
+				<!-- <div class="timeline-block">
 
 						<div class="timeline-ico">
 							<i class="fa fa-briefcase"></i>
@@ -411,11 +452,11 @@
 						</div>
 
 					</div>  -->
-					<!-- /timeline-block -->
+				<!-- /timeline-block -->
 
-				</div> <!-- /timeline-wrap -->
+			</div> <!-- /timeline-wrap -->
 
-			</div> <!-- /col-twelve -->
+		</div> <!-- /col-twelve -->
 
 		</div> <!-- /resume-timeline -->
 
