--- a/index.html
+++ b/index.html
@@ -565,11 +565,59 @@
 				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work01.png">
-							<a href="#modal-01" class="overlay">
+							<img src="images/portfolio/work06.png" alt="Salad">
+							<a href="#modal-06" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">滇池蓝藻水华漂移模拟</h3>
+										<h3 class="folio-title">新疆棉花决策管理支持系统</h3>
+										<span class="folio-types">
+											XinJiang Cotton
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/work05.png">
+							<a href="#modal-05" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">邳州市地下水脆弱性评价</h3>
+										<span class="folio-types">
+											邳州市水利局项目
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/work04.png">
+							<a href="#modal-04" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">地下空间三维建模与分析系统</h3>
+										<span class="folio-types">
+											软件著作权
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/work03.png">
+							<a href="#modal-03" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">滇池流场可视化</h3>
 										<span class="folio-types">
 											昆明市环境监测中心项目
 										</span>
@@ -597,11 +645,11 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work03.png">
-							<a href="#modal-03" class="overlay">
+							<img src="images/portfolio/work01.png">
+							<a href="#modal-01" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">滇池流场可视化</h3>
+										<h3 class="folio-title">滇池蓝藻水华漂移模拟</h3>
 										<span class="folio-types">
 											昆明市环境监测中心项目
 										</span>
@@ -610,55 +658,6 @@
 							</a>
 						</div>
 					</div> <!-- /folio-item -->
-
-					<div class="bgrid folio-item">
-						<div class="item-wrap">
-							<img src="images/portfolio/work04.png">
-							<a href="#modal-04" class="overlay">
-								<div class="folio-item-table">
-									<div class="folio-item-cell">
-										<h3 class="folio-title">地下空间三维建模与分析系统</h3>
-										<span class="folio-types">
-											软件著作权
-										</span>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div> <!-- /folio-item -->
-
-					<div class="bgrid folio-item">
-						<div class="item-wrap">
-							<img src="images/portfolio/work05.png">
-							<a href="#modal-05" class="overlay">
-								<div class="folio-item-table">
-									<div class="folio-item-cell">
-										<h3 class="folio-title">邳州市地下水脆弱性评价</h3>
-										<span class="folio-types">
-											邳州市水利局项目
-										</span>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div> <!-- /folio-item -->
-
-					<div class="bgrid folio-item">
-						<div class="item-wrap">
-							<img src="images/portfolio/work06.png" alt="Salad">
-							<a href="#modal-06" class="overlay">
-								<div class="folio-item-table">
-									<div class="folio-item-cell">
-										<h3 class="folio-title">秋月春风等闲度</h3>
-										<span class="folio-types">
-											Personal Blog
-										</span>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-					<!-- /folio-item -->
 
 
 					<!-- modal popups - begin
