--- a/index.html
+++ b/index.html
@@ -578,22 +578,21 @@
 							</a>
 						</div>
 					</div>
-
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img src="images/portfolio/work05.png">
 							<a href="#modal-05" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">邳州市地下水脆弱性评价</h3>
+										<h3 class="folio-title">滇池蓝藻水华漂移模拟</h3>
 										<span class="folio-types">
-											邳州市水利局项目
+											昆明市环境监测中心项目
 										</span>
 									</div>
 								</div>
 							</a>
 						</div>
-					</div>
+					</div> <!-- /folio-item -->
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
@@ -601,9 +600,9 @@
 							<a href="#modal-04" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">地下空间三维建模与分析系统</h3>
+										<h3 class="folio-title">滇池 Chl-a 浓度可视化</h3>
 										<span class="folio-types">
-											软件著作权
+											昆明市环境监测中心项目
 										</span>
 									</div>
 								</div>
@@ -633,9 +632,9 @@
 							<a href="#modal-02" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">滇池 Chl-a 浓度可视化</h3>
+										<h3 class="folio-title">地下空间三维建模与分析系统</h3>
 										<span class="folio-types">
-											昆明市环境监测中心项目
+											软件著作权
 										</span>
 									</div>
 								</div>
@@ -649,23 +648,42 @@
 							<a href="#modal-01" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">滇池蓝藻水华漂移模拟</h3>
+										<h3 class="folio-title">邳州市地下水脆弱性评价</h3>
 										<span class="folio-types">
-											昆明市环境监测中心项目
+											邳州市水利局项目
 										</span>
 									</div>
 								</div>
 							</a>
 						</div>
-					</div> <!-- /folio-item -->
-
+					</div>
 
 					<!-- modal popups - begin
 	            ============================================================= -->
-					<div id="modal-01" class="popup-modal slider mfp-hide">
+					<div id="modal-06" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work01.png" alt="" />
+							<img src="images/portfolio/modals/work06.png" alt="" />
+						</div>
+
+						<div class="description-box">
+							<h4>新疆棉花决策管理支持系统</h4>
+							<p>构建一个棉花生产决策管理系统及服务平台，提供科学化、规模化、标准化的技术服务，可实现用户/地块管理、田间生产任务管理、作物长势/病虫害/环境/灾害预测预警、农资服务管理、农技服务管理和农机服务管理等功能。
+							</p>
+
+							<div class="categories">XinJiang Cotton</div>
+						</div>
+
+						<div class="link-box">
+							<a href="javascript:void(0)">Details</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-06 -->
+					<div id="modal-05" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/portfolio/modals/work05.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -681,12 +699,12 @@
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
-					</div> <!-- /modal-01 -->
+					</div>
 
-					<div id="modal-02" class="popup-modal slider mfp-hide">
+					<div id="modal-04" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work02.png" alt="" />
+							<img src="images/portfolio/modals/work04.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -724,10 +742,10 @@
 
 					</div> <!-- /modal-03 -->
 
-					<div id="modal-04" class="popup-modal slider mfp-hide">
+					<div id="modal-02" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work04.png" alt="" />
+							<img src="images/portfolio/modals/work02.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -744,10 +762,10 @@
 
 					</div> <!-- /modal-04 -->
 
-					<div id="modal-05" class="popup-modal slider mfp-hide">
+					<div id="modal-01" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work05.png" alt="" />
+							<img src="images/portfolio/modals/work01.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -764,25 +782,7 @@
 
 					</div> <!-- /modal-05 -->
 
-					<div id="modal-06" class="popup-modal slider mfp-hide">
 
-						<div class="media">
-							<img src="images/portfolio/modals/work06.png" alt="" />
-						</div>
-
-						<div class="description-box">
-							<h4>秋月春风等闲度</h4>
-							<p>个人博客，分享生活，分享技术。记录学习笔记。</p>
-
-							<div class="categories">Personal Blog</div>
-						</div>
-
-						<div class="link-box">
-							<a href="http://www.renkaigis.cn">Details</a>
-							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
-
-					</div> <!-- /modal-06 -->
 
 
 					<!-- modal popups - end
