--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
 							</p>
 							<p>
-								<h5>研究方向：</h5>农业保险与极端气候插值预测
+								<h5>研究方向：</h5>气象要素空间插值预测 | GIS 空间分析
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
