--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
-				<h2>项目经历（Work Experience）</h2>
+				<h2>项目经历（Project Experience）</h2>
 			</div> <!-- /resume-header -->
 			<div class="col-twelve">
 				<div class="timeline-wrap">
