--- a/index.html
+++ b/index.html
@@ -109,12 +109,14 @@
 
 	</section> <!-- /intro -->
 
-
 	<!-- about section
    ================================================== -->
 	<section id="about">
 
 		<div class="row section-intro">
+			<div class="col-twelve">
+				<a class="button stroke " href="./cn.html" target="_blank">中文 >></a>
+			</div>
 			<div class="col-twelve">
 
 				<h5>About</h5>
@@ -132,19 +134,21 @@
 
 			<div class="col-six tab-full">
 				<h3>Profile</h3>
-				<p>不求外之美，而求内之秀。</p>
+				<p>To be better.</p>
 				<ul class="info-list">
 					<li>
 						<strong>Fullname:</strong>
-						<span>任凯</span>
+						<span>Kai Ren</span>
 					</li>
 					<li>
 						<strong>Birth Date:</strong>
-						<span>90 后</span>
+						<span>90 s</span>
 					</li>
 					<li>
 						<strong>Research:</strong>
-						<span>气象要素空间插值预测 | 地理信息系统建模模拟 | 湖泊水动力数值模型模拟 | 前后端系统开发</span>
+						<span>Spatial Interpolation Prediction of Meteorological Elements | GIS Modeling and Simulation
+							| Lake Hydrodynamic Numerical Model Simulation | Front-end and Back-end System Development
+						</span>
 					</li>
 					<li>
 						<strong>Website:</strong>
@@ -159,8 +163,9 @@
 
 			<div class="col-six tab-full">
 				<h3>Skills</h3>
-				<p>熟练掌握 ArcGIS、Erdas、ENVI 等 GIS 软件；精通 Java、R 语言，掌握 C++、C#、Python、HTML+CSS+JS 等语言，熟悉 Vue.js、Spring boot
-					等前后端框架。
+				<p>Proficient in ArcGIS, Erdas, ENVI and other GIS software; Proficient in Java and R languages, master
+					C++, C #, Python, HTML+CSS+JS and other languages, and be familiar with front and back end
+					frameworks such as Vue.js and Spring boot.
 				</p>
 				<ul class="skill-bars">
 					<li>
@@ -223,7 +228,7 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
-				<h2>教育程度（Education）</h2>
+				<h2>Education</h2>
 			</div> <!-- /resume-header -->
 			<div class="col-twelve">
 				<div class="timeline-wrap">
@@ -232,18 +237,21 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>博士</h3>
+							<h3>Ph.D.</h3>
 							<p>2020.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
 							<h4>Curtin University, Australia - GIS Spatial Analysis
 							</h4>
-							<h4>西北农林科技大学 - 资源环境学院 - 土地资源与空间信息技术</h4>
+							<h4>Northwest A&F University - College of Resources and Environment - Land Resources and
+								Spatial Information Technology
+							</h4>
 							<p>
-								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
+								<h5>Major Courses:</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
 							</p>
 							<p>
-								<h5>研究方向：</h5>气象要素空间插值预测 | GIS 空间分析
+								<h5>Research interests:</h5>Spatial Interpolation Prediction of Meteorological Elements
+								| GIS spatial analysis
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -253,16 +261,20 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>硕士</h3>
+							<h3>Master</h3>
 							<p>2016.09 - 2019.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>南京师范大学 - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统</h4>
+							<h4>Nanjing Normal University-College of Geographic Sciences - Key Laboratory of Virtual
+								Geographic Environment Ministry of Education (VGE) - Cartography and Geographic
+								Information System
+							</h4>
 							<p>
-								<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
+								<h5>Major Courses:</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS
+								地学分析等。
 							</p>
 							<p>
-								<h5>研究方向：</h5>湖泊水动力数值模型模拟
+								<h5>Research interests:</h5>Numerical Model Simulation of Lake Hydrodynamics
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -272,13 +284,13 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>本科</h3>
+							<h3>Bachelor</h3>
 							<p>2012.09 - 2016.06</p>
 						</div>
 						<div class="timeline-content">
 							<h4>西北农林科技大学 - 资源环境学院 - 地理信息系统</h4>
 							<p>
-								<h5>主修课程：</h5>
+								<h5>Major Courses:</h5>
 								数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
 								地理信息系统、空间分析与模型等。
 							</p>
