--- a/index.html
+++ b/index.html
@@ -124,8 +124,11 @@
 
 				<div class="intro-info">
 					<img src="images/profile-pic.jpg" alt="Profile Picture">
-					<p class="lead">热情随和，活波开朗，具有进取精神和团队精神，有较强的动手能力。</p>
-					<p class="lead">热爱学习，热爱跑步，热爱摄影，热爱生活！</p>
+					<p class="lead">Warm and easy-going, live wave cheerful, with enterprising spirit and team spirit,
+						have strong practical ability.
+					</p>
+					<p class="lead">Love Learning! Love Running! Love Photography! Love GIS! Love Life!
+					</p>
 				</div>
 			</div>
 		</div> <!-- /section-intro -->
@@ -134,7 +137,8 @@
 
 			<div class="col-six tab-full">
 				<h3>Profile</h3>
-				<p>To be better.</p>
+				<p>To be better.
+					Keep loving! </p>
 				<ul class="info-list">
 					<li>
 						<strong>Fullname:</strong>
@@ -146,7 +150,8 @@
 					</li>
 					<li>
 						<strong>Research:</strong>
-						<span>Spatial Interpolation Prediction of Meteorological Elements | GIS Modeling and Simulation
+						<span style="line-height: 1.5em;">Spatial Interpolation Prediction of Meteorological Elements |
+							GIS Modeling and Simulation
 							| Lake Hydrodynamic Numerical Model Simulation | Front-end and Back-end System Development
 						</span>
 					</li>
@@ -219,7 +224,7 @@
 				<h1>More of my credentials.</h1>
 				<aside class="pull-quote">
 					<blockquote>
-						<p>世界那么大，我 —— 渺小而伟大！</p>
+						<p>Something more about me!</p>
 					</blockquote>
 				</aside>
 
@@ -247,7 +252,9 @@
 								Spatial Information Technology
 							</h4>
 							<p>
-								<h5>Major Courses:</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
+								<h5>Major Courses:</h5>Principles And Methods Of Remote Sensing Analysis, Progress In
+								Land Science And 3s Technology, Frontier Of Agricultural Resources And Environmental
+								Science, Advanced Plant Nutrition, Soil Physics, Etc.
 							</p>
 							<p>
 								<h5>Research interests:</h5>Spatial Interpolation Prediction of Meteorological Elements
@@ -270,8 +277,10 @@
 								Information System
 							</h4>
 							<p>
-								<h5>Major Courses:</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS
-								地学分析等。
+								<h5>Major Courses:</h5>GIS Principle, Remote Sensing Digital Image Processing, Virtual
+								Reality And GIS New Media, Modern Cartography, GIS Technology, Numerical Calculation,
+								Modern Physical Geography, GIS Geoscience Analysis, Etc.
+
 							</p>
 							<p>
 								<h5>Research interests:</h5>Numerical Model Simulation of Lake Hydrodynamics
@@ -288,11 +297,15 @@
 							<p>2012.09 - 2016.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>西北农林科技大学 - 资源环境学院 - 地理信息系统</h4>
+							<h4>Northwest A&F University - College of Resources and Environment - Geographic Information
+								System </h4>
 							<p>
 								<h5>Major Courses:</h5>
-								数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
-								地理信息系统、空间分析与模型等。
+								Database Principle And Application, Digital Mapping Principle And Method, Remote Sensing
+								Principle And Method, Object-Oriented Programming, Remote Sensing Digital Image
+								Processing, Geographic Information System, Remote Sensing Image Analysis And
+								Application, Resource And Environmental Information System, Digital Photogrammetry, Web
+								GIS, Spatial Analysis And Model, Etc.
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -330,7 +343,7 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
-				<h2>项目经历（Project Experience）</h2>
+				<h2>Project Experience</h2>
 			</div> <!-- /resume-header -->
 			<div class="col-twelve">
 				<div class="timeline-wrap">
@@ -339,17 +352,20 @@
 							<i class="fa fa-briefcase"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>智慧农业“三秦创新团队”</h3>
+							<h3>Smart Agriculture "Sanqin Innovation Team"
+
+							</h3>
 							<p>2021.09 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>陕西省智慧农业决策系统和大数据分析平台 | 参与者</h4>
+							<h4>Shaanxi Smart Agricultural Decision-Making System And Big Data Analysis Platform
+								| Participant</h4>
 							<span>
-								<h5 style="display: inline;">项目描述：</h5>
+								<h5 style="display: inline;">Project Description:</h5>
 								构建旱地农业系统大数据分析平台和“智慧果园”决策支持平台。构建智慧农业技术体系，支撑农业、果业、气象、水利等业务部门灾害监测、预警预报、农业保险、产量预报等技术需求；
 							</span></br>
 							<span>
-								<h5 style="display: inline;">工作描述：</h5>
+								<h5 style="display: inline;">Work Description: </h5>
 								在新疆喀什和兵团第七师一二八团采集不同棉花品种在生育期内的气候数据（风速、风向、温湿度、降水、墒情等）及生长状况数据（行距、株距、株高、产量等），用以验证团队开发的“棉先知”模型系统，以及助力于棉花更科学更智慧的种植。
 							</span>
 						</div>
@@ -360,17 +376,18 @@
 							<i class="fa fa-briefcase"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>新疆棉花管理系统</h3>
+							<h3>Xinjiang Cotton Management System
+							</h3>
 							<p>2020.09 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>新疆棉花决策管理支持系统 | 参与者</h4>
+							<h4>Xinjiang Cotton Decision Management Support System | Participant</h4>
 							<span>
-								<h5 style="display: inline;">项目描述：</h5>
+								<h5 style="display: inline;">Project Description:</h5>
 								构建一个棉花生产决策管理系统及服务平台，提供科学化、规模化、标准化的技术服务，可实现用户/地块管理、田间生产任务管理、作物长势/病虫害/环境/灾害预测预警、农资服务管理、农技服务管理和农机服务管理等功能。
 							</span></br>
 							<span>
-								<h5 style="display: inline;">工作描述：</h5>
+								<h5 style="display: inline;">Work Description:</h5>
 								参与棉花决策管理支持系统的开发设计，可实现对棉花种植区域内地块的管理及对棉花生育期内施肥灌溉等措施进行决策支持，提供相应的解决方案。该系统有待进一步的数据支撑和验证。
 							</span>
 						</div>
@@ -381,18 +398,20 @@
 							<i class="fa fa-briefcase"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>昆明市环境监测中心项目</h3>
+							<h3>Projects of Kunming Environmental Monitoring Center </h3>
 							<p>2017.04 - 2018.05</p>
 						</div>
 						<div class="timeline-content">
-							<h4>滇池蓝藻水华遥感监测及预警体系研究 | 负责人</h4>
+							<h4>Study On Remote Sensing Monitoring And Early Warning System Of Cyanobacteria Bloom In
+								Dianchi Lake | Principal</h4>
 							<span>
-								<h5 style="display: inline;">项目描述：</h5>利用 Fortran、C#、VTK 与插件技术，基于 ArcGIS Engine
+								<h5 style="display: inline;">Project Description:</h5>利用 Fortran、C#、VTK 与插件技术，基于 ArcGIS
+								Engine
 								平台，结合
 								FVCOM 模型模拟了蓝藻水华空间分布特征与动态演化过程，并完成滇池蓝藻水华漂移系统的研发；
 							</span></br>
 							<span>
-								<h5 style="display: inline;">工作描述：</h5>
+								<h5 style="display: inline;">Work Description:</h5>
 								作为主要负责人，完成了蓝藻水华漂移机理与可视化研究，模拟了蓝藻水华空间分布特征及动态演化过程，并完成了滇池蓝藻水华漂移系统的研发。
 							</span>
 						</div>
@@ -402,17 +421,17 @@
 							<i class="fa fa-briefcase"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>邳州市水利局项目</h3>
+							<h3>Projects of Pizhou Water Conservancy Bureau </h3>
 							<p>2017.04 - 2018.05</p>
 						</div>
 						<div class="timeline-content">
-							<h4>邳州市地下水脆弱性评价 | 负责人</h4>
+							<h4>Groundwater Vulnerability Assessment in Pizhou City | Principal</h4>
 							<span>
-								<h5 style="display: inline;">项目描述：</h5>基于 ArcGIS 软件、C#
+								<h5 style="display: inline;">Project Description:</h5>基于 ArcGIS 软件、C#
 								开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作；
 							</span></br>
 							<span>
-								<h5 style="display: inline;">工作描述：</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。
+								<h5 style="display: inline;">Work Description:</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。
 							</span>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -421,18 +440,19 @@
 							<i class="fa fa-briefcase"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>国家级科创项目</h3>
+							<h3> National Science And Technology Innovation Projects </h3>
 							<p>2013.12 - 2015.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>《黄土坡耕地微地形数值模拟及机理研究》 | 负责人</h4>
+							<h4>Numerical Simulation and Mechanism Study on Microtopography of Loess Slope Farmland |
+								Principal</h4>
 							<span>
-								<h5 style="display: inline;">项目描述：</h5>
+								<h5 style="display: inline;">Project Description: </h5>
 								采用人工模拟降雨试验和微地形扫描测量等方法，动态监测坡面水蚀过程中侵蚀形态发生与演变过程，结合
 								GIS 技术建立相应的微地形 DEM，通过理论分析和数学模拟，建立坡面不同侵蚀形态发生演变过程动态数值模拟模型；
 							</span></br>
 							<span>
-								<h5 style="display: inline;">工作描述：</h5>
+								<h5 style="display: inline;">Work Description:</h5>
 								作为项目总负责人，统筹规划，确定实验方案，带领组员开展黄土坡耕地坡面侵蚀形态演变的试验研究，并进行数据模拟及检验。
 							</span>
 						</div>
@@ -474,52 +494,54 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
-				<h2>成果奖项（Achievements &amp; Awards）</h2>
+				<h2>Achievements &amp; Awards</h2>
 			</div> <!-- /resume-header -->
 
-			<h3>软件著作权：</h3>
+			<h3>Software Copyright: </h3>
 			<div class="table-responsive">
 				<table>
-					<thead style="text-align: center;">
+					<thead>
 						<tr>
-							<th>名称</th>
-							<th>登记号</th>
-							<th>日期</th>
+							<th>Software Name</th>
+							<th>Registration</th>
+							<th>Date</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody style="text-align: center;">
 						<tr>
-							<td>《地学模型模拟动态可视化系统》</td>
+							<td>Dynamic Visualization System For Geoscience Model Simulation
+							</td>
 							<td>2017SR374929</td>
 							<td>2017-07-17</td>
 						</tr>
 						<tr>
-							<td>《地学模拟多维网格自适应生成系统》</td>
+							<td>Multi-Dimensional Grid Adaptive Generation System For Geoscience Simulation</td>
 							<td>2017SR374939</td>
 							<td>2017-07-17</td>
 						</tr>
 						<tr>
-							<td>《地下空间三维建模与分析系统》</td>
+							<td>3D Modeling and Analysis System of Underground Space </td>
 							<td>2017SR431955</td>
 							<td>2017-08-06</td>
 						</tr>
 						<tr>
-							<td>《水文地质建模与模拟系统》</td>
+							<td>Hydrogeological Modeling and Simulation System </td>
 							<td>2017SR427979</td>
 							<td>2017-08-07</td>
 						</tr>
 						<tr>
-							<td>《大型水体总悬浮物模拟系统》</td>
+							<td>Simulation System of Total Suspended Solids in Large Water Bodies</td>
 							<td>2018SR798096</td>
 							<td>2018-10-08</td>
 						</tr>
 						<tr>
-							<td>《滇池水体蓝藻水华漂移模拟系统》</td>
+							<td>Dianchi Lake Water Body Cyanobacteria Bloom Drift Simulation System</td>
 							<td>2018SR955442</td>
 							<td>2018-11-29</td>
 						</tr>
 						<tr>
-							<td>《层状地质体结构面识别与智能分析系统》</td>
+							<td>Structural Surface Recognition And Intelligent Analysis System Of Layered Geological
+								Body</td>
 							<td>2019SR0706808</td>
 							<td>2019-07-09</td>
 						</tr>
@@ -527,11 +549,11 @@
 				</table>
 			</div>
 
-			<h3>技能证书：</h3>
+			<h3>Skills certificate: </h3>
 			<ul class="disc">
-				<li>英语六级</li>
-				<li>三级网络技术证书</li>
-				<li>普通话一级乙等证书</li>
+				<li>CET-6</li>
+				<li>Level 3 Network Technology Certificate </li>
+				<li>Putonghua First-Class Certificate</li>
 			</ul>
 
 			<h3>学习活动：</h3>
@@ -958,7 +980,8 @@
 				<h5>Contact</h5>
 				<h1>I'd Love To Hear From You.</h1>
 
-				<p class="lead">希望有共同爱好的人能共同进步！欢迎探讨学习上的问题。</p>
+				<p class="lead">Hope that people with common interests can make progress together! Welcome to discuss
+					learning issues.</p>
 
 			</div>
 		</div> <!-- /section-intro -->
