--- a/cn.html
+++ b/cn.html
@@ -53,18 +53,20 @@
 
 				<nav id="main-nav-wrap">
 					<ul class="main-navigation">
-						<li class="current"><a class="smoothscroll" href="#intro" title=""><i
-									class="fa fa-home fa-fw"></i>&nbsp;&nbsp;Home</a></li>
-						<li><a class="smoothscroll" href="#about" title=""><i
-									class="fa  fa-user"></i>&nbsp;&nbsp;&nbsp;&nbsp;About</a></li>
-						<li><a class="smoothscroll" href="#resume" title=""><i
-									class="fa  fa-id-card-o"></i>&nbsp;&nbsp;Resume</a></li>
-						<li><a class="smoothscroll" href="#portfolio" title=""><i
-									class="fa  fa-th-large"></i>&nbsp;&nbsp;&nbsp;Portfolio</a></li>
-						<li><a class="smoothscroll" href="#services" title=""><i
-									class="fa  fa-code"></i>&nbsp;&nbsp;&nbsp;Services</a></li>
-						<li><a class="smoothscroll" href="#contact" title=""><i
-									class="fa  fa-send"></i>&nbsp;&nbsp;&nbsp;Contact</a></li>
+						<li class="current">
+							<a class="smoothscroll" href="#intro" title="" style="text-align: center;"><i
+									class="fa fa-home" style="margin-right: 1em;"></i>主页</a></li>
+						<li><a class="smoothscroll" href="#about" title="" style="text-align: center;"><i
+									class="fa  fa-user" style="margin-right: 1em;"></i>简介</a></li>
+						<li><a class="smoothscroll" href="#resume" title="" style="text-align: center;"><i
+									class="fa  fa-id-card-o" style="margin-right: 1em;"></i>经历</a></li>
+						<li><a class="smoothscroll" href="#portfolio" title="" style="text-align: center;"><i
+									class="fa  fa-th-large" style="margin-right: 1em;"></i>成果</a>
+						</li>
+						<li><a class="smoothscroll" href="#services" title="" style="text-align: center;"><i
+									class="fa  fa-code" style="margin-right: 1em;"></i>技能</a></li>
+						<li><a class="smoothscroll" href="#contact" title="" style="text-align: center;"><i
+									class="fa  fa-send" style="margin-right: 1em;"></i>联络</a></li>
 					</ul>
 				</nav>
 			</div> <!-- /top-bar -->
@@ -84,11 +86,12 @@
 				<div class="col-twelve">
 
 					<h5>Hello, World.</h5>
+					<h6></h6>
 					<h1>I'm 任 凯.</h1>
 
 					<p class="intro-position">
-						<span>GIS Researcher </span>
-						<span>GIS Software Engineer</span>
+						<span>热爱学习的鸡丝儿 </span>
+						<span>渴望成为技术控的菜鸟 </span>
 					</p>
 
 					<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -120,7 +123,8 @@
 					<a class="button stroke " href="./index.html" target="_blank">English >></a>
 				</div>
 				<h5>About</h5>
-				<h1>Let me introduce myself.</h1>
+				<h6></h6>
+				<h1 style="font-family:KaiTi">热爱，是为了更好 …</h1>
 
 				<div class="intro-info">
 					<img src="images/profile-pic.jpg" alt="Profile Picture">
@@ -213,7 +217,8 @@
 			<div class="col-twelve">
 
 				<h5>Resume</h5>
-				<h1>More of my credentials.</h1>
+				<h6></h6>
+				<h1 style="font-family:KaiTi">你想知道的，我来告诉你 …</h1>
 				<aside class="pull-quote">
 					<blockquote>
 						<p>世界那么大，我 —— 渺小而伟大！</p>
@@ -330,7 +335,7 @@
 						</div>
 						<div class="timeline-header">
 							<h3>智慧农业“三秦创新团队”</h3>
-							<p>2021.09 - Current</p>
+							<p>2021.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
 							<h4>陕西省智慧农业决策系统和大数据分析平台 | 参与者</h4>
@@ -351,7 +356,7 @@
 						</div>
 						<div class="timeline-header">
 							<h3>新疆棉花管理系统</h3>
-							<p>2020.09 - Current</p>
+							<p>2020.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
 							<h4>新疆棉花决策管理支持系统 | 参与者</h4>
@@ -550,10 +555,11 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 				<h5>Portfolio</h5>
-				<h1>Check Out Some of My Works.</h1>
+				<h6></h6>
+				<h1 style="font-family:KaiTi">来时的路 …</h1>
 				<aside class="pull-quote">
 					<blockquote>
-						<p>You have to believe in yourself. That's the secret of success.</p>
+						<p>灯塔！ 梦想！ 前行！</p>
 					</blockquote>
 				</aside>
 
@@ -835,10 +841,10 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Services</h5>
-				<h1>What Can I Do For You?</h1>
-
-				<p class="lead">菜鸟一枚，水平一般般，学习 ing ……</p>
+				<h5>SKILLS</h5>
+				<h6></h6>
+				<h1 style="font-family:KaiTi">高山仰止，景行行止</h1>
+				<p class="lead">一枚渴望成为技术控的鸡丝儿，学习 ing …</p>
 
 			</div>
 		</div> <!-- /section-intro -->
@@ -945,7 +951,7 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Contact</h5>
+				<h5>联系方式</h5>
 				<h1>I'd Love To Hear From You.</h1>
 
 				<p class="lead">希望有共同爱好的人能共同进步！欢迎探讨学习上的问题。</p>
@@ -962,11 +968,11 @@
 					<i class="icon-pin"></i>
 				</div>
 
-				<h5>Where to find me</h5>
+				<h5>地 址</h5>
 
 				<p>
-					NanJing Normal University<br>
-					School of Geography Science
+					西北农林科技大学<br>
+					资源环境学院
 				</p>
 
 			</div>
@@ -977,7 +983,7 @@
 					<i class="icon-mail"></i>
 				</div>
 
-				<h5>Email Me At</h5>
+				<h5>邮 件</h5>
 
 				<p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
@@ -990,9 +996,9 @@
 					<i class="icon-phone"></i>
 				</div>
 
-				<h5>Call Me At</h5>
+				<h5>电话</h5>
 
-				<p>Phone: 18851138358<br>
+				<p>+86 18851138358<br>
 				</p>
 
 			</div>
