--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
 							<p>2012.09 - 2016.06</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Northwest A&F University - College of Resources and Environment - Geographic Information
+							<h4>Northwest A&F University - College of Natural Resources and Environment - Geographic
+								Information
 								System </h4>
 							<p>
 								<h5>Major Courses:</h5>
@@ -867,10 +868,9 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Services</h5>
-				<h1>What Can I Do For You?</h1>
-
-				<p class="lead">菜鸟一枚，水平一般般，学习 ing ……</p>
+				<h5>SKILLS</h5>
+				<h1>What Can I Do?</h1>
+				<p class="lead">There is still a lot of knowledge to learn. </p>
 
 			</div>
 		</div> <!-- /section-intro -->
@@ -998,8 +998,8 @@
 				<h5>Where to find me</h5>
 
 				<p>
-					NanJing Normal University<br>
-					School of Geography Science
+					Northwest A&F University<br>
+					College of Natural Resources and Environment
 				</p>
 
 			</div>
@@ -1025,7 +1025,7 @@
 
 				<h5>Call Me At</h5>
 
-				<p>Phone: 18851138358<br>
+				<p>+86 18851138358<br>
 				</p>
 
 			</div>
