--- a/cn/index.html
+++ b/cn/index.html
@@ -20,16 +20,16 @@
 
 	<!-- CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/vendor.css">
-	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/main.css">
+	<link rel="stylesheet" href="../css/vendor.css">
+	<link rel="stylesheet" href="../css/font-awesome/css/font-awesome.min.css">
 
 
 	<!-- script
    ================================================== -->
-	<script src="js/modernizr.js"></script>
-	<script src="js/pace.min.js"></script>
+	<script src="../js/modernizr.js"></script>
+	<script src="../js/pace.min.js"></script>
 
 	<!-- favicons
 	================================================== -->
@@ -120,7 +120,7 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 				<div class="col-twelve">
-					<a class="button stroke " href="./index.html" target="_blank">English >></a>
+					<a class="button stroke " href="../" target="_blank">English >></a>
 				</div>
 				<h5>About</h5>
 				<h6></h6>
