--- a/cn/index.html
+++ b/cn/index.html
@@ -33,7 +33,7 @@
 
 	<!-- favicons
 	================================================== -->
-	<link rel="icon" type="image" href="images/favicon.ico">
+	<link rel="icon" type="image" href="../images/favicon.ico">
 
 </head>
 
@@ -127,7 +127,7 @@
 				<h1 style="font-family:KaiTi">热爱，是为了更好 …</h1>
 
 				<div class="intro-info">
-					<img src="images/profile-pic.jpg" alt="Profile Picture">
+					<img src="../images/profile-pic.jpg" alt="Profile Picture">
 					<p class="lead">热情随和，活波开朗，具有进取精神和团队精神，有较强的动手能力。</p>
 					<p class="lead">热爱学习，热爱跑步，热爱摄影，热爱生活！</p>
 				</div>
@@ -200,7 +200,7 @@
 		<div class="row button-section">
 			<div class="col-twelve">
 				<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
-				<a href="assets/KaiRen_CV_2023.pdf" title="Download CV" class="button button-primary"
+				<a href="../assets/KaiRen_CV_2023.pdf" title="Download CV" class="button button-primary"
 					target="__blank">Download CV</a>
 				<!-- <a href="http://d.renkaigis.com/resume/Resume_RenKai1.pdf" title="Download CV"
 					class="button button-primary" target="__blank">Download CV</a> -->
@@ -573,7 +573,7 @@
 				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work06.png" alt="Salad">
+							<img src="../images/portfolio/work06.png" alt="Salad">
 							<a href="#modal-06" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -588,7 +588,7 @@
 					</div>
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work05.png">
+							<img src="../images/portfolio/work05.png">
 							<a href="#modal-05" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -604,7 +604,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work04.png">
+							<img src="../images/portfolio/work04.png">
 							<a href="#modal-04" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -620,7 +620,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work03.png">
+							<img src="../images/portfolio/work03.png">
 							<a href="#modal-03" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -636,7 +636,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work02.png">
+							<img src="../images/portfolio/work02.png">
 							<a href="#modal-02" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -652,7 +652,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work01.png">
+							<img src="../images/portfolio/work01.png">
 							<a href="#modal-01" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -671,7 +671,7 @@
 					<div id="modal-06" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work06.png" alt="" />
+							<img src="../images/portfolio/modals/work06.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -691,7 +691,7 @@
 					<div id="modal-05" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work05.png" alt="" />
+							<img src="../images/portfolio/modals/work05.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -712,7 +712,7 @@
 					<div id="modal-04" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work04.png" alt="" />
+							<img src="../images/portfolio/modals/work04.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -732,7 +732,7 @@
 					<div id="modal-03" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work03.png" alt="" />
+							<img src="../images/portfolio/modals/work03.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -753,7 +753,7 @@
 					<div id="modal-02" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work02.png" alt="" />
+							<img src="../images/portfolio/modals/work02.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -773,7 +773,7 @@
 					<div id="modal-01" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work01.png" alt="" />
+							<img src="../images/portfolio/modals/work01.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -1032,7 +1032,7 @@
 					<a target="_blank"
 						href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=61909002000104"
 						style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img
-							src="images/beian.png" style="float:left;" />
+							src="../images/beian.png" style="float:left;" />
 						<p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#6e6e6e;">陕公网安备
 							61909002000104号</p>
 					</a><span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
@@ -1055,10 +1055,10 @@
 
 	<!-- Java Script
    ================================================== -->
-	<script src="js/jquery-2.1.3.min.js"></script>
-	<script src="js/plugins.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/myCustom.js" type="text/javascript"></script>
+	<script src="../js/jquery-2.1.3.min.js"></script>
+	<script src="../js/plugins.js"></script>
+	<script src="../js/main.js"></script>
+	<script src="../js/myCustom.js" type="text/javascript"></script>
 
 </body>
 
