--- a/cn/index.html
+++ b/cn/index.html
@@ -105,8 +105,8 @@
 			<li><a href="http://renkaigis.cn/"><i class="fa fa-heartbeat"></i></a></li>
 			<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
-			<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li>
+			<li><a href="https://twitter.com/renkaigis"><i class="fa fa-twitter"></i></a></li>
+			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 			<li><a href="http://photo.renkaigis.cn/"><i class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
 
@@ -1020,8 +1020,8 @@
 					<li><a href="http://renkaigis.cn/"><i class="fa fa-heartbeat"></i></a></li>
 					<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
-					<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li>
+					<li><a href="https://twitter.com/renkaigis"><i class="fa fa-twitter"></i></a></li>
+					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 					<li><a href="http://photo.renkaigis.cn/"><i class="fa fa-camera"></i></a></li>
 				</ul>
 
