--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 			<li><a href="http://renkaigis.cn/"><i class="fa fa-heartbeat"></i></a></li>
 			<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
-			<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li>
+			<li><a href="https://twitter.com/renkaigis"><i class="fa fa-twitter"></i></a></li>
+			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 			<li><a href="http://photo.renkaigis.cn/"><i class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
 
@@ -115,7 +115,7 @@
 
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<a class="button stroke " href="./cn/" target="_blank">中文 >></a>
+				<a class="button stroke " href="./cn/index.html" target="_blank">中文 >></a>
 			</div>
 			<div class="col-twelve">
 
@@ -1047,8 +1047,8 @@
 					<li><a href="http://renkaigis.cn/"><i class="fa fa-heartbeat"></i></a></li>
 					<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
-					<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li>
+					<li><a href="https://twitter.com/renkaigis"><i class="fa fa-twitter"></i></a></li>
+					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 					<li><a href="http://photo.renkaigis.cn/"><i class="fa fa-camera"></i></a></li>
 				</ul>
 
