--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<a class="button stroke " href="./cn/index.html" target="_blank">中文 >></a>
+				<a class="button stroke " href="./cn/" target="_blank">中文 >></a>
 			</div>
 			<div class="col-twelve">
 
