--- a/cn/index.html
+++ b/cn/index.html
@@ -952,7 +952,7 @@
 			<div class="col-twelve">
 
 				<h5>联系方式</h5>
-				<h1>I'd Love To Hear From You.</h1>
+				<h1>I'd Love to Hear From You.</h1>
 
 				<p class="lead">希望有共同爱好的人能共同进步！欢迎探讨学习上的问题。</p>
 
