--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
 			<div class="col-twelve">
 
 				<h5>Contact</h5>
-				<h1>I'd Love To Hear From You.</h1>
+				<h1>I'd Love to Hear From You.</h1>
 
 				<p class="lead">Hope that people with common interests can make progress together! Welcome to discuss
 					learning issues.</p>
