--- a/cn/index.html
+++ b/cn/index.html
@@ -970,7 +970,7 @@
 
 				<h5>地 址</h5>
 
-				<p>
+				<p style="color: #888888">
 					西北农林科技大学<br>
 					资源环境学院
 				</p>
@@ -998,7 +998,7 @@
 
 				<h5>电话</h5>
 
-				<p> &plus;86 18851138358<br>
+				<p style="color: #888888"> &plus;86 18851138358<br>
 				</p>
 
 			</div>
