--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
 
 				<h5>Where to find me</h5>
 
-				<p>
+				<p style="color: #888888">
 					Northwest A&F University<br>
 					College of Natural Resources and Environment
 				</p>
@@ -1025,7 +1025,7 @@
 
 				<h5>Call Me At</h5>
 
-				<p> &plus;86 18851138358<br>
+				<p style="color: #888888"> &plus;86 18851138358<br>
 				</p>
 
 			</div>
