--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="http://renkaigis.cn/"><i class="fa fa-heartbeat"></i></a></li>
-			<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
-			<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
-			<li><a href="https://twitter.com/renkaigis"><i class="fa fa-twitter"></i></a></li>
+			<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-heartbeat"></i></a></li>
+			<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
+			<li><a href="https://weibo.com/renkai123" title="Weibo"><i class="fa fa-weibo"></i></a></li>
+			<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-			<li><a href="http://photo.renkaigis.cn/"><i class="fa fa-camera"></i></a></li>
+			<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
@@ -1044,12 +1044,12 @@
 			<div class="col-six tab-full pull-right social">
 
 				<ul class="footer-social">
-					<li><a href="http://renkaigis.cn/"><i class="fa fa-heartbeat"></i></a></li>
-					<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
-					<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
-					<li><a href="https://twitter.com/renkaigis"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-heartbeat"></i></a></li>
+					<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://weibo.com/renkai123" title="Weibo"><i class="fa fa-weibo"></i></a></li>
+					<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-					<li><a href="http://photo.renkaigis.cn/"><i class="fa fa-camera"></i></a></li>
+					<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 				</ul>
 
 			</div>
